Added campaign pusher

--- a/PushCampaignSystem/WebApi/WebApi.csproj
+++ b/PushCampaignSystem/WebApi/WebApi.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\MessageQueue\MessageQueue.csproj" />
+    <ProjectReference Include="..\PushNotificationProvider\PushNotificationProvider.csproj" />
   </ItemGroup>
 
 </Project>
